# medtriage-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.new.yml  docker-compose.yml  requirements.txt  run_local.bat  start.bat  start.sh  stop.bat
application/: .gitignore  state.py  style.py
backend/: .gitignore  Dockerfile  Dockerfile.local  README.md  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/data/: README.md  generator.py
backend/api/ml/: __init__.py  classifier.py  evaluator.py  feature_config.py  feedback_handler.py  mlflow_config.py  preprocessor.py
backend/api/routes/: benchmark.py  conversation.py  debug_mlflow.py  feedback.py  history.py  mlflow_routes.py  monitoring.py  simulation.py  triage.py
backend/api/schemas/: agent_io.py  conversation.py  extraction.py  monitoring.py  validators.py
backend/api/scripts/: generate_dataset.py  init_model.py  retrain_with_feedback.py  train_model.py
backend/api/services/: agent_service.py  extraction_service.py  french_triage.py  med_tools.py  monitoring_service.py  triage_service.py
backend/data/: history.json
backend/data/feedback/: nurse_feedback.jsonl
backend/data/knowledge_base/: Ressources_Projet.json
backend/data/processed/: combined_training.csv
backend/data/raw/conversations/: conv1.txt  conv2.txt  conv3.txt  conv4.txt  conv5.txt  conv6.txt  conv7.txt  conv8.txt  conv9.txt  sommaire.txt
backend/data/vector_db/: chroma.sqlite3
backend/models/trained/: triage_model.json
conversations/: conv3.txt  (+2 more)
(+128 files in other folders)
