[project]
name = "medtriage-backend"
version = "1.0.0"
description = "Backend API - Snapshot Production"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # --- Core API ---
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.22",
    
    # --- Machine Learning & Data ---
    "numpy==1.26.4",
    "pandas==2.3.3",
    "xgboost==3.1.3",
    "scikit-learn==1.8.0",
    "torch==2.10.0", # Note : +cpu géré par la source ci-dessous
    
    # --- LLM & Agents ---
    "litellm==1.81.6",
    "ecologits[litellm]==0.5.2",
    "pydantic-ai==0.2.4",
    "fastmcp==2.14.4",
    "griffe==1.5.1",
    
    # --- RAG & Vector DB ---
    "chromadb==1.4.1",
    "sentence-transformers==5.2.2",
    
    # --- MLOps ---
    "mlflow==2.10.2",
    
    # --- Utils ---
    "rapidfuzz==3.14.3",
    "matplotlib==3.10.8"
]

# Configuration explicite pour PyTorch CPU
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }